Alteração do classe com o debug

--- a/force-app/main/default/classes/MyClassHelloWord.cls
+++ b/force-app/main/default/classes/MyClassHelloWord.cls
@@ -1,5 +1,6 @@
 public with sharing class MyClassHelloWord {
     public MyClassHelloWord() {
         String var = 'Hello Word';
+        System.debug(var);
     }
 }
